--- a/src/app/components/main/dashboard/inner/teacher/tcourses/tcourses.component.html
+++ b/src/app/components/main/dashboard/inner/teacher/tcourses/tcourses.component.html
@@ -1,1 +1,30 @@
-<p>tcourses works!</p>
+<div class="container-fluid">
+  <div class="col-12">
+    <div class="col-12 mt-2 mb-2 ps-2 pe-2" *ngIf="loading">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </div>
+    <div class="col-12 pt-3 pb-3 ps-4 pe-4 text-white rounded-3 d-flex align-items-center justify-content-between"
+         style="
+         background-color: #4050B5;
+         font-size: 18px;
+         font-weight: 600;">
+      <span>All Courses</span>
+      <button routerLink="/dashboard/mycourses" class="col-3" mat-raised-button>My Courses</button>
+    </div>
+    <div class="col-12 ps-3 pe-3 mt-3">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 p-2" *ngFor="let courses of allCourses">
+          <div class="col-12 d-flex flex-column rounded-3 p-3 cart">
+            <div class="col-12 d-flex align-items-center justify-content-center text-center fs-6 text-white">
+              <div class="col-10 rounded-3 pt-2 pb-2 header-text">{{ courses.data.title }}</div>
+            </div>
+            <div class="col-12 mt-2 des">
+              {{courses.data.description}}
+            </div>
+            <div class="col-12 mt-3 fs-6 lec">Lecturer&nbsp;:&nbsp;{{ courses.data.teacherName }}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
