--- a/src/app/components/main/dashboard/inner/teacher/new-course/new-course.component.html
+++ b/src/app/components/main/dashboard/inner/teacher/new-course/new-course.component.html
@@ -1,9 +1,18 @@
 <div class="container-fluid">
+  <div class="col-12 mt-2 mb-2 ps-2 pe-2">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </div>
+  <div class="col-12 rounded-3 pt-3 pb-3 p-3 mt-2 mb-3 text-white d-flex align-items-center justify-content-start"
+       style="background-color: #4050B5;
+    font-size: 18px;
+    font-weight: 600">
+    <button routerLink="/dashboard/mycourses" class="me-3" mat-icon-button aria-label="Go back" style="background-color: white">
+      <mat-icon style="color: black;">arrow_back</mat-icon>
+    </button>
+    <span>Add Courses</span>
+  </div>
   <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-    <div class="col-11 rounded-3 pt-4 pb-4 p-3 mt-2 mb-3 text-white d-flex align-items-center justify-content-start" style="background-color: #4050B5;
-    font-size: 16px;
-    font-weight: 600">Add Courses</div>
-    <div class="col-11 rounded-3 p-3 border border-lg">
+    <div class="col-11 rounded-3 p-3" style="border: 5px solid #4050B5;">
       <form>
         <div class="col-12">
           <mat-form-field class="col-12 mt-3" appearance="outline">
@@ -16,6 +25,9 @@
             <mat-label>Description</mat-label>
             <textarea rows="10" matInput placeholder="Type here..."></textarea>
           </mat-form-field>
+        </div>
+        <div class="col-12 mt-3">
+          <button mat-raised-button color="primary" style="font-size: 15px; height: 40px;" class="offset-9 col-3">ADD</button>
         </div>
       </form>
     </div>
