update teacher section

--- a/src/app/components/main/dashboard/inner/student/assignments/dialog-context.html
+++ b/src/app/components/main/dashboard/inner/student/assignments/dialog-context.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Upload Your Assignment</h2>
 <mat-dialog-content class="mat-typography">
   <div class="col-12 mb-3">
-    <div class="col-12 bg-danger pt-2 pb-2 mb-3 rounded-3 text-center fs-6 text-white" style="font-weight: 600;
+    <div class="col-12 ps-2 pe-2 bg-danger pt-2 pb-2 mb-3 rounded-3 text-center fs-6 text-white" style="font-weight: 600;
     font-size: 13px">
       Remember that you can only submit once, so double check your assignment and then submit the assignment.
     </div>
