--- a/src/app/components/main/dashboard/inner/teacher/tcourses/inner/my-courses/my-courses.component.scss
+++ b/src/app/components/main/dashboard/inner/teacher/tcourses/inner/my-courses/my-courses.component.scss
@@ -16,7 +16,7 @@
 }
 
 .des{
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .lec{
@@ -38,4 +38,11 @@
 
 .course-header {
   background-color: #4050B5;
+}
+
+.no-content{
+  background-color: #b6bee2;
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
 }
