--- a/src/app/components/main/dashboard/inner/teacher/tcourses/inner/update-course/update-course.component.html
+++ b/src/app/components/main/dashboard/inner/teacher/tcourses/inner/update-course/update-course.component.html
@@ -9,10 +9,10 @@
     <button routerLink="/dashboard/mycourses" class="me-3" mat-icon-button aria-label="Go back" style="background-color: white">
       <mat-icon style="color: black;">arrow_back</mat-icon>
     </button>
-    <span>Add Courses</span>
+    <span>Update Courses</span>
   </div>
   <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-    <div class="col-11 rounded-3 p-3" style="border: 5px solid #4050B5;">
+    <div class="col-11 rounded-3 p-3 mb-5" style="border: 5px solid #4050B5;">
       <form>
         <div class="col-12">
           <mat-form-field class="col-12 mt-3" appearance="outline">
@@ -27,7 +27,7 @@
           </mat-form-field>
         </div>
         <div class="col-12 mt-3">
-          <button mat-raised-button color="primary" style="font-size: 15px; height: 40px;" class="offset-9 col-3">ADD</button>
+          <button mat-raised-button color="primary" style="font-size: 15px; height: 40px;" class="offset-9 col-3">UPDATE</button>
         </div>
       </form>
     </div>
