--- a/src/app/components/main/dashboard/inner/teacher/tcourses/inner/add-lesson/add-lesson.component.html
+++ b/src/app/components/main/dashboard/inner/teacher/tcourses/inner/add-lesson/add-lesson.component.html
@@ -14,16 +14,10 @@
   <div class="col-12 d-flex flex-column align-items-center justify-content-center">
     <div class="col-11 rounded-3 p-3 mb-5" style="border: 5px solid #4050B5;">
       <form [formGroup]="form" (ngSubmit)="allLesson()">
-        <div class="col-12 d-flex align-items-center justify-content-center gap-2">
-          <mat-form-field class="col-3 mt-3" appearance="outline">
-            <mat-label>Index</mat-label>
-            <input formControlName="index" matInput placeholder="Enter index">
-          </mat-form-field>
           <div class="flex-grow-1 rounded-3 mb-3 mt-3 p-3 text-white d-flex align-items-center justify-content-center"
-               style="background-color: #F44336; font-weight: 600;font-size: 15px;">When you're going to enter an index, you should start with one (2). If you start with a
-          different number, your order of lessons may change. If you are going to add multiple lessons, be sure to
-          increment the index one at a time</div>
-        </div>
+               style="background-color: #F44336; font-weight: 600;font-size: 15px;">
+            Make sure to add your lessons in order
+          </div>
         <div class="col-12">
           <mat-form-field class="col-12 mt-3" appearance="outline">
             <mat-label>Lesson Title</mat-label>
