--- a/src/app/components/main/dashboard/inner/teacher/tcourses/inner/update-lesson/update-lesson.component.html
+++ b/src/app/components/main/dashboard/inner/teacher/tcourses/inner/update-lesson/update-lesson.component.html
@@ -6,40 +6,28 @@
        style="background-color: #4050B5;
     font-size: 18px;
     font-weight: 600">
-    <button routerLink="/dashboard/newlesson/{{selectedId}}" class="me-3" mat-icon-button aria-label="Go back" style="background-color: white">
+    <button routerLink="/dashboard/newlesson/{{selectedCourseId}}" class="me-3" mat-icon-button aria-label="Go back" style="background-color: white">
       <mat-icon style="color: black;">arrow_back</mat-icon>
     </button>
-    <span>Add Lessons</span>
+    <span>Update {{lessonText}} Lesson</span>
   </div>
   <div class="col-12 d-flex flex-column align-items-center justify-content-center">
     <div class="col-11 rounded-3 p-3 mb-5" style="border: 5px solid #4050B5;">
-      <form [formGroup]="form" (ngSubmit)="allLesson()">
-        <div class="col-12 d-flex align-items-center justify-content-center gap-2">
-          <mat-form-field class="col-3 mt-3" appearance="outline">
-            <mat-label>Index</mat-label>
-            <input formControlName="index" matInput placeholder="Enter index">
-          </mat-form-field>
-          <div class="flex-grow-1 rounded-3 mb-3 mt-3 p-3 text-white d-flex align-items-center justify-content-center"
-               style="background-color: #F44336; font-weight: 600;font-size: 15px;">When you're going to enter an index, you should start with one (2). If you start with a
-          different number, your order of lessons may change. If you are going to add multiple lessons, be sure to
-          increment the index one at a time</div>
-        </div>
         <div class="col-12">
           <mat-form-field class="col-12 mt-3" appearance="outline">
             <mat-label>Lesson Title</mat-label>
-            <input formControlName="title" matInput placeholder="Enter the title here...">
+            <input #title matInput [value]="lessonText">
           </mat-form-field>
         </div>
         <div class="col-12">
           <mat-form-field class="col-12" appearance="outline">
             <mat-label>Lesson Description</mat-label>
-            <textarea formControlName="des" rows="10" matInput placeholder="Type here..."></textarea>
+            <textarea #des rows="10" matInput [value]="description"></textarea>
           </mat-form-field>
         </div>
         <div class="col-12 mt-3">
-          <button type="submit" [disabled]="form.invalid || loading" mat-raised-button color="primary" style="font-size: 15px; height: 40px;" class="offset-9 col-3">ADD</button>
+          <button type="submit" (click)="updateLesson(title.value,des.value)" [disabled]="loading" mat-raised-button color="primary" style="font-size: 15px; height: 40px;" class="offset-9 col-3">UPDATE</button>
         </div>
-      </form>
     </div>
   </div>
 </div>
