--- a/src/app/components/main/dashboard/inner/home/home.component.html
+++ b/src/app/components/main/dashboard/inner/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="col-12 h-100 d-flex align-items-start justify-content-center main">
-  <img src="./assets/dashboard-img/dash.png" class="col-12 rounded-3" alt="">
+  <img src="./assets/dashboard-img/new-one.avif" class="col-12 rounded-3" alt="">
 </div>
