--- a/src/app/components/main/dashboard/dashboard.component.html
+++ b/src/app/components/main/dashboard/dashboard.component.html
@@ -28,6 +28,19 @@
     <button routerLink="/dashboard/tcourses" class="col-3" style="font-size: 15px;font-weight: 600;" mat-raised-button>All Courses</button>
 
   </div>
+
+  <!-- ==== teachers ==== -->
+
+  <div *ngIf="admin" style="background-color: #4050B5;font-size: 25px;font-weight: 600;"
+       class="col-6 rounded-3 d-flex align-items-center justify-content-between text-white pt-3 pb-3 ps-2 pe-2">
+    <!--    <button class="col-6 p-2" routerLink="/dashboard/tcourses" mat-flat-button color="primary">Courses</button>-->
+
+    <div class="col-9 d-flex align-items-center justify-content-center">Admin Pilot LMS</div>
+
+    <button routerLink="/dashboard/addteacher" class="col-3" style="font-size: 15px;font-weight: 600;" mat-raised-button><i class="fa-solid fa-plus fw-bold"></i> Teachers</button>
+
+  </div>
+
 <!--  <div *ngIf="teacher" class="col-2 d-flex align-items-center justify-content-center">-->
 <!--    <button class="col-6 p-2" routerLink="/dashboard/tlessons" mat-flat-button color="primary">Lessons</button>-->
 <!--  </div>-->
